@@ -31,6 +31,7 @@
 #define UPD_MODE_DUMP_GAME              0x15
 #define UPD_MODE_DUMP_TV                0x16
 #define UPD_MODE_DUMP_GENERIC           0x17
+#define UPD_MODE_LIST_MACROS            0x18
 
 #define PRIO_UPD_MODE_MACRO             0x1001
 #define PRIO_UPD_MODE_INFO              0x1002
